tests/unit/default/syntax-error/172-alter-table-dot-column-to-type.x.t
---- IN ----
*%table.name:int=>:uint|
---- OUT ----
---- ERR ----
syntax: expected EOL after `...able.name:int=>:uint` near `|` at position 23 - at line 1
---- EXIT ----
1
